apps/portal/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend
  namespace: tops-portal
spec:
  selector:
    app: portal-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
