apps/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-backend
  labels:
    app.kubernetes.io/name: tops-portal
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: tops-portal
    app.kubernetes.io/component: backend
---
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend
  labels:
    app.kubernetes.io/name: tops-portal
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: tops-portal
    app.kubernetes.io/component: frontend
